# AttivitaProgettuale

./: .gitignore  Dockerfile  README.md  parser.sh
Compose/: Compose MySQLInvoker.yaml  DockerfileMySQL
CouchDBInvoker/: Cargo.toml
CouchDBInvoker/src/: main.rs
CouchDBRustTest/: Cargo.toml
CouchGenericFunction/: Cargo.toml
Dockerfile/: DockerfileCouch  DockerfileMongo  DockerfileMongoNoConnection  DockerfileMySQL  DockerfileMySQLNoConnection  DockerfileNoConnection  DockerfileStresser  JAVADockerfileMongo  JAVADockerfileMySQL  JAVADockerfileNoConnection  JSDockerfileMongo  JSDockerfileMySQL  JSDockerfileNoConnection
Dockerfile/MongoGenericFunction/: Cargo.toml
Dockerfile/MongoGenericFunction/src/: main.rs
GenericFunction/: Cargo.toml
GenericFunctionCouch/: Cargo.toml
GenericFunctionWithFlag/: Cargo.toml
InvokerNoConnection/: Cargo.toml
JSCouchGenericFunction/: index-create.js  index-read.js  package-lock.json  package.json
JSGenericFunctionWithFlag/: index-create.js  index-read.js  package-lock.json  package.json
JSMongoGenericFunction/: index-create.js  index-read.js  package-lock.json  package.json
JSMySQLGenericFunction/: index-create.js  index-read.js  package-lock.json  package.json
JavaCouchGenericFunction/: build.gradle  settings.gradle
JavaGenericFunctionWithFlag/: build.gradle  settings.gradle
JavaMongoGenericFunction/: build.gradle  settings.gradle
JavaMySQLGenericFunction/: build.gradle  settings.gradle
MongoInvoker/: Cargo.toml
MongoInvoker/src/: main.rs
MySQLGenericFunction/: Cargo.toml
MySQLInvoker/: .project  Cargo.toml  Dockerfile
MySQLInvoker/src/: main.rs
Result/: DB_LATENCY_Mongo_Create  DB_LATENCY_Mongo_Create_sub  DB_LATENCY_Mongo_Read  DB_LATENCY_MySQL_Create  DB_LATENCY_MySQL_Read  WORK_LATENCY_Mongo_Read  (+17 more)
(+110 files in other folders)
