[package]
name = "CouchDBInvokerAlternative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.0.0"
serde = "*"
serde_derive = "*"
log = "0.4.14"
env_logger = "0.9.0"
nats = "0.9.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
#sofa = "0.6"
serde_json = "1.0"

[dependencies.rmp]
rmp = "^0.8"
