[package]
name = "MongoGenericFunction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
clap = { version = "3.1.6", features = ["derive"] }


[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]